new items added

--- a/scss/simple-html-template.scss
+++ b/scss/simple-html-template.scss
@@ -1,2 +1,8 @@
+@import "_variables";
 @import "normalize";
 @import "reset";
+
+@import "nav";
+@import "container";
+@import "button";
+@import "grid";
