--- a/css/simple-html-template.scss
+++ b/css/simple-html-template.scss
@@ -198,3 +198,115 @@ img {
   display: block;
   max-inline-size: 100%;
 }
+
+.nav {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  padding-left: 16px;
+  border-bottom: 1px solid #ccc;
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  height: 38px;
+  margin-right: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
+  color: #333;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.active {
+  background-color: #ddd;
+}
+
+.content {
+  display: flex;
+  position: relative;
+  padding: 24px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 24px;
+}
+
+.button {
+  display: inline-flex;
+  position: relative;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  height: 32px;
+  line-height: normal;
+  cursor: pointer;
+  min-width: 64px;
+  margin-right: 8px;
+  padding-left: 24px;
+  padding-right: 24px;
+  align-items: center;
+  justify-content: center;
+}
+.button:hover {
+  background-color: #ddd;
+}
+.button .button-emphasize {
+  background-color: #888;
+  color: #fff;
+}
+.button .button-emphasize:hover {
+  background-color: #666;
+}
+
+.row {
+  display: inline-flex;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+.col .col-1-12 {
+  width: 8.3333333333%;
+}
+.col .col-2-12 {
+  width: 16.6666666667%;
+}
+.col .col-3-12 {
+  width: 25%;
+}
+.col .col-4-12 {
+  width: 33.3333333333%;
+}
+.col .col-5-12 {
+  width: 41.6666666667%;
+}
+.col .col-6-12 {
+  width: 50%;
+}
+.col .col-7-12 {
+  width: 58.3333333333%;
+}
+.col .col-8-12 {
+  width: 66.6666666667%;
+}
+.col .col-9-12 {
+  width: 75%;
+}
+.col .col-10-12 {
+  width: 83.3333333333%;
+}
+.col .col-11-12 {
+  width: 91.6666666667%;
+}
+.col .col-12-12 {
+  width: 100%;
+}
