--- a/scss/simple-html-template.scss
+++ b/scss/simple-html-template.scss
@@ -6,3 +6,8 @@
 @import "container";
 @import "button";
 @import "grid";
+@import "table";
+@import "form";
+@import "list";
+@import "pop-up";
+@import "modal-dialog";
