--- a/scss/button.scss
+++ b/scss/button.scss
@@ -18,12 +18,13 @@
     padding-right: 24px;
     align-items: center;
     justify-content: center;
+    align-self: start;
     
     &:hover {
         background-color: #ddd;
     }
 
-    .button-emphasize {
+    +.button-dark {
         background-color: #888;
         color: #fff;
         
