--- a/scss/pop-up.scss
+++ b/scss/pop-up.scss
@@ -13,12 +13,20 @@
     box-shadow: 0 5px 5px -3px rgba(0,0,0,0.2), 
                 0 8px 10px 1px rgba(0, 0,0, 0.14),
                 0 3px 14px 2px rgba(0, 0,0, 0.12);
+    border-radius: 2px;
+    box-sizing: border-box;
+
     & .pop-up-content {
         display: flex;
         position: relative;
         padding: 8px;
     }
+
+    & .pop-up-button {
+        align-self: end;
+    }
 }
+
 
 .pop-up--open {
     visibility: visible;
