--- a/css/simple-html-template.css
+++ b/css/simple-html-template.css
@@ -240,7 +240,6 @@ img {
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
   height: 32px;
-  line-height: normal;
   cursor: pointer;
   min-width: 64px;
   margin-right: 8px;
@@ -304,6 +303,132 @@ img {
 }
 .col.col-12-12 {
   width: 100%;
+}
+
+.sparcer-4 .row {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+.sparcer-4 .row:first-child {
+  margin-top: 0px;
+}
+.sparcer-4 .row:last-child {
+  margin-bottom: 0px;
+}
+.sparcer-4 .col {
+  margin-left: 2px;
+  margin-right: 2px;
+}
+.sparcer-4 .col:first-child {
+  margin-left: 0px;
+}
+.sparcer-4 .col:last-child {
+  margin-right: 0px;
+}
+
+.sparcer-8 .row {
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+.sparcer-8 .row:first-child {
+  margin-top: 0px;
+}
+.sparcer-8 .row:last-child {
+  margin-bottom: 0px;
+}
+.sparcer-8 .col {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+.sparcer-8 .col:first-child {
+  margin-left: 0px;
+}
+.sparcer-8 .col:last-child {
+  margin-right: 0px;
+}
+
+.sparcer-16 .row {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.sparcer-16 .row:first-child {
+  margin-top: 0px;
+}
+.sparcer-16 .row:last-child {
+  margin-bottom: 0px;
+}
+.sparcer-16 .col {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+.sparcer-16 .col:first-child {
+  margin-left: 0px;
+}
+.sparcer-16 .col:last-child {
+  margin-right: 0px;
+}
+
+.sparcer-24 .row {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+.sparcer-24 .row:first-child {
+  margin-top: 0px;
+}
+.sparcer-24 .row:last-child {
+  margin-bottom: 0px;
+}
+.sparcer-24 .col {
+  margin-left: 12px;
+  margin-right: 12px;
+}
+.sparcer-24 .col:first-child {
+  margin-left: 0px;
+}
+.sparcer-24 .col:last-child {
+  margin-right: 0px;
+}
+
+.sparcer-32 .row {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.sparcer-32 .row:first-child {
+  margin-top: 0px;
+}
+.sparcer-32 .row:last-child {
+  margin-bottom: 0px;
+}
+.sparcer-32 .col {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+.sparcer-32 .col:first-child {
+  margin-left: 0px;
+}
+.sparcer-32 .col:last-child {
+  margin-right: 0px;
+}
+
+.sparcer-64 .row {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+.sparcer-64 .row:first-child {
+  margin-top: 0px;
+}
+.sparcer-64 .row:last-child {
+  margin-bottom: 0px;
+}
+.sparcer-64 .col {
+  margin-left: 32px;
+  margin-right: 32px;
+}
+.sparcer-64 .col:first-child {
+  margin-left: 0px;
+}
+.sparcer-64 .col:last-child {
+  margin-right: 0px;
 }
 
 .table {
@@ -537,4 +662,166 @@ textarea.input-control {
 }
 .dialog--open .dialog-surfice {
   opacity: 1;
+}
+
+.typography {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
+.typography--headline1 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 6rem;
+  line-height: 6rem;
+  font-weight: 300;
+  letter-spacing: -0.015625em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--headline2 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 3.75rem;
+  line-height: 3.75rem;
+  font-weight: 300;
+  letter-spacing: -0.0083333333em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--headline3 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 3rem;
+  line-height: 3.125rem;
+  font-weight: 400;
+  letter-spacing: normal;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--headline4 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 2.125rem;
+  line-height: 2.5rem;
+  font-weight: 400;
+  letter-spacing: 0.0073529412em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--headline5 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 400;
+  letter-spacing: normal;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--headline6 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  font-weight: 500;
+  letter-spacing: 0.0125em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--subtitle1 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1rem;
+  line-height: 1.75rem;
+  font-weight: 400;
+  letter-spacing: 0.009375em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--subtitle2 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 500;
+  letter-spacing: 0.0071428571em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--body1 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 0.03125em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--body2 {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  letter-spacing: 0.0178571429em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--caption {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  letter-spacing: 0.0333333333em;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.typography--button {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 0.875rem;
+  line-height: 2.25rem;
+  font-weight: 500;
+  letter-spacing: 0.0892857143em;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.typography--overline {
+  font-family: Roboto, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: 0.75rem;
+  line-height: 2rem;
+  font-weight: 500;
+  letter-spacing: 0.1666666667em;
+  text-decoration: none;
+  text-transform: uppercase;
 }
